--- a/templates/article/new.html.twig
+++ b/templates/article/new.html.twig
@@ -21,6 +21,13 @@
         {{ form_end(form) }}
     </div>
 
+    {% for label, messages in app.flashes %}
+    {% for message in messages %}
+        <div class="alert alert-{{ label }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endfor %}
 
 
     <style>
