--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-
-    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<!--
-    <meta name="descriptiongoogle" content="Blog pour les passionnés de l'aviation">
-    <meta name="keywords" content="AeroClubBlog"
--->
+    {% block meta %}
+    <meta name="description" content="Bienvenue sur le blog de l'Aéroclub,créé par Al karshi Abdullrahman, passionné d'aviation et développeur web. Partagez notre passion du vol et discutez avec les membres de notre aéroclub.">
+    <meta name="keywords" content="Aéroclub,aviation,blog,forum de discussion">    
+    {% endblock %}
+
     
     <title>{% block title %}Welcome!{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+    
+    
+    <!-- Préchargement de la police Google -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" crossorigin="anonymous">
     
     <!-- BOOSTRAP-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/style.css') }}">
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous" defer></script>
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     <script src="https://kit.fontawesome.com/b04d3e51a0.js" crossorigin="anonymous"></script>
@@ -35,211 +38,36 @@
         {{ encore_entry_script_tags('app') }}
     {% endblock %}
 
-    <style>
-        html, body {
-            height: 100%;
-            width: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            font-family: Oswald;
-        }
-        #ONGLET {
-            width: 100%;
-            background-color: #5ED9F4;
-        }
-        #content {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        footer {
-            display: flex;
-            justify-content: space-around;
-            list-style-type: none;
-            background-color: #5ED9F4;
-            align-items: center;
-            font-size: 18px;
-        }
-        .fa.fa-linkedin-square:before {
-            content: "\f08c";
-            color: blue;
-        }
-
-        .hamburger {
-            display: none;
-            font-size: 30px;
-            cursor: pointer;
-            color: white;
-            background-color: #5ED9F4;
-            border: none;
-            padding: 10px;
-            margin: 10px;
-        }
-
-        .menu-toggle {
-            display: none;
-        }
-
-        .nav-links {
-            display: flex;
-            flex-direction: row;
-            padding-left: 0;
-            list-style-type: none;
-            justify-content: space-around;
-            margin: 0;
-            align-items: center;
-        }
-
-        .nav-links li {
-            position: relative;
-        }
-
-        .nav-links li ul {
-            display: none;
-            position: absolute;
-            top: 100%;
-            left: 0;
-            background-color: #5ED9F4;
-            padding: 0;
-            list-style-type: none;
-            min-width: 150px;
-        }
-
-        .nav-links li:hover > ul {
-            display: block;
-        }
-
-        .nav-links li ul li {
-            width: 100%;
-        }
-
-        .nav-links li ul li a {
-            display: block;
-            padding: 10px;
-            text-decoration: none;
-            color: black;
-        }
-
-        .nav-links li ul li a:hover {
-            background-color: #b3f0ff;
-        }
-
-        /* MEDIA QUERIES - de 768 pxl */
-        @media all and (max-width: 768px) {
-            .nav-links {
-                display: none;
-                flex-direction: column;
-                width: 100%;
-                padding: 0;
-            }
-
-            .hamburger {
-                display: block;
-            }
-
-            .menu-toggle:checked + .hamburger + .nav-links {
-                display: flex;
-            }
-
-            .nav-links li {
-                width: 100%;
-                text-align: center;
-                margin: 10px 0;
-            }
-
-            .nav-links li ul {
-                position: relative;
-                top: 0;
-                left: 0;
-                background-color: transparent;
-            }
-
-            .nav-links li ul li a {
-                padding: 5px 10px;
-            }
-
-            .nav-links li ul li a:hover {
-                background-color: transparent;
-            }
-
-        }
-
-
-        /* MEDIA QUERIES - de 425 pxl de la BASE */
-        @media all and (max-width: 425px) {
-            footer {
-                display: flex;
-                justify-content: center;
-                flex-direction: column;
-                width: 100%;
-            }
-
-            body > footer > ul{
-                text-align: center;
-                padding: 0;
-                margin: 0;    
-            }   
-        }
-
-
-
-        
-         /* MEDIA QUERIES - de 320 pxl de la BASE */
-         @media all and (max-width: 320px) {
-            body > footer > ul{
-                text-align: center;
-                padding: 0;
-                margin: 0;    
-            }
-
-            .listecategorie{
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-            }
-
-            .listecategorie li a{
-                flex-direction: column;
-                justify-content: center;
-            }
-
-            
-        }
-
-    </style>
-
-
-
-
+    
 
     
 </head>
 <body>
-    <nav id="ONGLET">
+    <nav id="ONGLET" aria-label="Navigation principale">
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="hamburger">&#9776;</label>
         <ul class="nav-links">
-            <li><img src="uploads/images/aeroclublogo.png" style="height: 80px; width: 100px;"></li>
-            <li><a href="{{ path('Accueil') }}" style="text-decoration: none;">Aeroclub</a></li>
+
+            <!-- asset permet de selectionner l'image voulu afin de tjr rendre l'img visible -->
+            <li><img src="{{ asset('uploads/images/aeroclublogo.png') }}"  alt="logo du blog Aeroclub" style="height: 80px; width: 100px;"></li>
+            <li><a href="{{ path('Accueil') }}" style="text-decoration: none;"  title="Accueil Aeroclub" >Aeroclub</a></li>
             
              <!-- Affichage pour les utilisateurs non connectés -->
             {% if not app.user %}
-                <li><a href="{{ path('RegistrationFormType') }}" style="text-decoration: none;">S'Inscrire</a></li>
-                <li><a href="{{ path('app_login') }}" style="text-decoration: none;">Se Connecter</a></li>
-                <li><a href="{{ path('app_forgot_password_request') }}" style="text-decoration: none;">Mot de Passe oublié</a></li>
+                <li><a href="{{ path('RegistrationFormType') }}" style="text-decoration: none;" title="Page d'inscription">S'Inscrire</a></li>
+                <li><a href="{{ path('app_login') }}" style="text-decoration: none;" title="Page de connexion">Se Connecter</a></li>
+                <li><a href="{{ path('app_forgot_password_request') }}" style="text-decoration: none;" title="Page de récupération du mot de passe">Mot de Passe oublié</a></li>
             {% else %}
 
             <!-- Affichage pour les utilisateurs connectés -->
             <li>
                 <a href="#" style="text-decoration: none;">Ajout</a>
                 <ul>
-                    <li><a href="{{ path('app_ajout_categorie') }}" style="text-decoration: none;">Ajout d'une Catégorie</a></li>
-                    <li><a href="{{ path('app_ajout_article') }}" style="text-decoration: none;">Ajout d'un Article</a></li>
+                    <li><a href="{{ path('app_ajout_categorie') }}" style="text-decoration: none;" title="Page d'ajout d'une Categorie">Ajout d'une Catégorie</a></li>
+                    <li><a href="{{ path('app_ajout_article') }}" style="text-decoration: none;" title="Page d'ajout d'un article">Ajout d'un Article</a></li>
                 </ul>
             </li>
-                <li><a href="{{ path('app_logout') }}" style="text-decoration: none;">Déconnexion</a></li>
+                <li><a href="{{ path('app_logout') }}" style="text-decoration: none;" >Déconnexion</a></li>
                 <li><a href="{{ path('app_mes_categories') }}" style="text-decoration: none;">Mes Categories</a></li>
                 <li><a href="{{ path('app_mes_articles') }}" style="text-decoration: none;">Mes Articles</a></li>
                 <li><a href="{{ path('app_mes_posts') }}" style="text-decoration: none;">Mes Posts</a></li>
@@ -247,8 +75,7 @@
                 <li><a href="{{ path('app_user_delete') }}" style="text-decoration: none;">Supprimer mon Compte</a></li>
             {% endif %}
 
-            
-             <!-- Affichage pour les administrateurs -->
+             <!-- Affichage VISIBLE UNIQUEMENT pour administrateur  -->
             {% if is_granted('ROLE_ADMIN') %}
                 <li>
                     <a href="{{ path('app_liste_comptesUser') }}" 
@@ -256,22 +83,19 @@
                             Listes des Utilisateurs
                     </a>
                 </li>
-
-                
-               
-
             {% endif %}
                 
         </ul>
     </nav>
 
     <!-- Listes des Categories -->
-    <nav class="listecategorie" 
-        style="display: flex; padding: 10px 0 10px 0; font-family: Oswald; font-size: 20px;background-color : #DAE9EC; justify-content: space-around; list-style: none;">
-        {% for categorie in categories %}
-            <li><a href="{{ path('app_articles_par_categorie', {'id': categorie.id}) }}" style="text-decoration: none; color: black;">{{ categorie.name }}</a></li>
-        {% endfor %}
-    </nav>
+   
+<nav class="listecategorie" aria-label="Liste des catégories" style="display: flex; padding: 10px 0; font-family: Oswald; font-size: 20px; background-color: #DAE9EC; justify-content: space-around; list-style: none;">
+    {% for categorie in categories %}
+        <li><a href="{{ path('app_articles_par_categorie', {'id': categorie.id}) }}" style="text-decoration: none; color: black;">{{ categorie.name }}</a></li>
+    {% endfor %}
+</nav>
+
 
 
     <div id="content" style="background-color : #DAE9EC;">
@@ -281,12 +105,18 @@
     <!-- FOOTER-->
     <footer>
         <ul>
-            <a href="https://www.linkedin.com/in/abdullrahman-al-karshi-a11b7b204/">
-                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-            </a>
+            <li style="list-style-type: none;">
+                <a href="https://www.linkedin.com/in/abdullrahman-al-karshi-a11b7b204/" aria-label="Bouton Linkedin">
+                    <i class="fa fa-linkedin-square" aria-hidden="true" style="font-size: 22px; align-items: center;"></i>
+                </a>
+            </li>
         </ul>
-        <li>&copy; Copyright 2024</li>
-        <li><a href="https://portfolio-alkarshi-abdullrahman.alwaysdata.net/" style="text-decoration: none;">Portfolio du créateur</a></li>
+      <!--  <li>&copy; Copyright 2024</li>  -->
+        <li><a href="https://portfolio-alkarshi-abdullrahman.alwaysdata.net/" 
+                style="text-decoration: none;">Portfolio du créateur
+            </a>
+        </li>
+    
     </footer>
 </body>
 </html>
