--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -1,13 +1,18 @@
 {# templates/reset_password/email.html.twig #}
 
-<h1>Bonjour</h1>
-
-<p>Pour modifier ton mot de Passe, clique sur ce lien.</p>
-
-<a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
-
-
-<p>Merci !</p>
-
-
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Réinitialisation de mot de passe</title>
+</head>
+<body>
+    <h1>Bonjour</h1>
+    
+    <p>Pour réinitialiser votre mot de passe, cliquez sur le lien ci-dessous :</p>
+    
+    <p><a href="{{ url('app_reset_password', {token: resetToken.token}) }}">Cliquez ici pour réinitialiser votre mot de passe</a></p>
+    
+    <p>Merci !</p>
+</body>
+</html>
