--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -3,15 +3,20 @@
 {% block title %}Réinitialisez votre mot de passe{% endblock %}
 
 {% block body %}
-    <h1>Changer votre Mot de Passe</h1>
+    <div style="height: auto; border: 2px solid white; border-radius: 10px; padding: 20px; font-size: 20px; margin-top: 35px; padding-top: 35px;">
+        <h1 style="text-align: center;">Changer votre Mot de Passe</h1>
 
-    {{ form_start(resetForm) }}
-    {{ form_row(resetForm.email) }}
-    {{ form_row(resetForm.plainPassword) }}
-    <button type="submit" class="btn btn-primary">Réinitialiser le mot de passe</button>
-{{ form_end(resetForm) }}
-    
-   
-
-    
+        {{ form_start(resetForm) }}
+        <div style="margin-bottom: 15px;">
+            {{ form_row(resetForm.email, {'attr': {'class': 'form-control', 'placeholder': 'Votre email'}}) }}
+        </div>
+        <div style="margin-bottom: 15px;">
+            {{ form_row(resetForm.plainPassword.first, {'attr': {'class': 'form-control', 'placeholder': 'Nouveau mot de passe'}}) }}
+        </div>
+        <div style="margin-bottom: 15px;">
+            {{ form_row(resetForm.plainPassword.second, {'attr': {'class': 'form-control', 'placeholder': 'Confirmer le mot de passe'}}) }}
+        </div>
+        <button type="submit" class="btn btn-primary" style="width: 100%;">Réinitialiser le mot de passe</button>
+        {{ form_end(resetForm) }}
+    </div>
 {% endblock %}
