Ajout d'un champ de saisi dans mon onglet "Mon profil" permettant la modification du nom de l'utilisateur,celui-ci une fois modifié va également être changé instantanément dans les posts ou l'utilisateur à intéragit. De plus,si l'utilisateur supprime son compte alors ses reponses aux posts resteront visible mais il sera indiqué en rouge que cet utilisateur à supprimé son compte.

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,9 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page d'Accueil - Aéroclub{% endblock %}
+{% block title %}Page d'Accueil - Aéroclub {% endblock %}
 
 
+{% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="{{ asset('public/css/style.css') }}">
+    
+    <!-- Préchargement de la police Google -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" crossorigin="anonymous">
+    
+    <!-- BOOSTRAP-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+   
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous" defer></script>
+
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+    <script src="https://kit.fontawesome.com/b04d3e51a0.js" crossorigin="anonymous"></script>
+
+    
+{% endblock %}
 
 {% block navbar %}
 <nav>
@@ -136,336 +155,6 @@
     </section>
 </main>
 
-
-
-<style>
-  
-/* Style pour la première section */
-#blocavion {
-  display: flex;
-  height: 500px;
-}
-
-
-#blocavionBloc {
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  background-color: white;
-}
-
-#blocavionIMG {
-  width: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-#Titrebloc {
-  font-family: Oswald;
-  font-size: 35px;
-  text-align: center;
-}
-
-#SousTitrebloc {
-  font-style: italic;
-  padding-bottom: 25px;
-  font-family: Gupter;
-  text-align: center;
-}
-
-#Texte {
-  color: grey;
-  font-style: italic;
-  text-align: center;
-  font-family: Raleway;
-  line-height: 1.6;
-  margin: 0; 
-  padding: 0 20px; 
-}
-
-
-
-
-
-
-/* Style pour la deuxième section */
-#bloglogoaero {
-  display: flex;
-  height: 400px;
-}
-
-#logoaeroIMG {
-  width: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-
-#contentBloc {
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: white; 
-  padding: 0 20px;
-}
-
-#contentBlocEnglobe {
-  max-width: 100%;
-  text-align: center;
-}
-
-#TitreContent {
-  font-family: Oswald;
-  font-size: 35px;
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-#SousTitreContent {
-  font-style: italic;
-  display: block;
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-#TexteContent {
-  font-family: Raleway;
-  color: grey;
-  font-style: italic;
-  line-height: 1.6;
-  text-align: center;
-  margin: 0;
-  padding: 0 20px; 
-}
-
-
-
-
-
-
-
-
-
-
-
-
-/* SECTION GALERIE */
-#GALERIE {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-  height: 400px;
-}
-
-#BLOC_IMG {
-  position: relative;
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	width: 100%;
-    overflow: hidden;
-}
-
-#BLOC_IMG img {
-  width: 100%;
-}
-
-#BLOC_IMG img:hover {
-  background-color: rgba(255, 165, 0, 0.7);
-}
-
-.EnglobeSigne {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-
-#BLOC_IMG:hover .EnglobeSigne {
-  opacity: 1;
-}
-
-.Signe {
-  font-size: 2rem;
-  color: white;
-}
-
-
-
-
-/* SERVICES */
-
-#SERVICES{
-	display: flex;
-	flex-direction: row;
-	width: 100%;
-	margin-top: 50px;
-	margin-bottom: 50px;
-}
-
-.EnglobeSERVICE{
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	justify-content: space-around;
-}
-
-
-.EnglobeSERVICE a img{  
-	display: flex;
-	margin-left: auto;
-    margin-right: auto;
-	width: 25%;
-	margin-bottom: 20px;
-    background-color: white;
-}
-
-.EnglobeSERVICE h3{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	text-align: center;
-	font-family: Oswald;
-	margin-bottom: 6px;
-}
-
-.TexteSERVICE{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	vertical-align: middle;
-	margin-bottom: 10px;
-	font-family: Gupter;
-	color: grey;
-	text-align: center;
-}
-
-
-
-
-
-/* MEDIAS QUERIES 1024*/
-
-@media all and (max-width: 1024px) { 
-  h4#ParagrapheTexte {
-      height: auto;
-      padding: 0;
-      margin: 0;
-  }
-}
-
-
-
-/* MEDIAS QUERIES 768 */
-@media all and (max-width: 768px) { 
-  /* TOUTE LA 1ER SECTION*/
-  #blocavion {
-    display: block;
-    height: 800px;
-  }
-  
-  /* les blocs blanc en plein vol*/
-  #blocavionBloc {
-    width: 100%;
-    min-height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: white;
-  }
-
-  /* IMAGES */
-  #blocavionIMG {
-    width: 100%;
-  }
-
-  #ParagrapheTexte{
-    font-size: 16px;
-  }
-
-  /* Grosse IMAGE*/
-  #GALERIE{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-  }
-
-  #BLOC_IMG{
-    width: 100%;
-    display: block;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  
-  #SERVICES{
-    display: block;
-    width: 100%;
-  }
-
-  footer{
-    width: 100%;
-  }
-
-
-}
-
-
-
-
-/* CACHER LA PARTIE IMAGES MEDIAS QUERIES 425 */
-@media all and (max-width: 425px) { 
-  #blocavionIMG{
-    height: auto;
-  }
-
-  #blocavionBloc{
-    height: auto;
-  }
-
-  #GALERIE{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-#BLOC_IMG{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin-bottom: 10px;
-}
-}
-
-
-/* CACHER LA PARTIE IMAGES MEDIAS QUERIES 320 */
-@media all and (max-width: 320px) { 
-  /*
-  #GALERIE{
-    display: none;
-  }
-    */
-}
-
-
-</style>
 
 
 {% endblock %}
