--- a/templates/article/articles_par_categorie.html.twig
+++ b/templates/article/articles_par_categorie.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Articles de la catégorie {{ categorie.name }}{% endblock %}
 
 {% block body %}
-    <div style="display: flex; justify-content: space-between;">
+    <div style="display: flex; margin:15px 15px; justify-content: space-between; height: auto; list-style-type: none; border: 2px solid white; border-radius: 10px; padding: 20px; font-size: 20px;">
         <div>
             <h1 style="text-align: center;">Articles de la catégorie "{{ categorie.name }}"</h1>
             <br>
