--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -68,6 +68,7 @@
                 </ul>
             </li>
                 <li><a href="{{ path('app_logout') }}" style="text-decoration: none;" >Déconnexion</a></li>
+                <li><a href="{{ path('app_mon_profil') }}" style="text-decoration: none;">Mon Profil</a></li>
                 <li><a href="{{ path('app_mes_categories') }}" style="text-decoration: none;">Mes Categories</a></li>
                 <li><a href="{{ path('app_mes_articles') }}" style="text-decoration: none;">Mes Articles</a></li>
                 <li><a href="{{ path('app_mes_posts') }}" style="text-decoration: none;">Mes Posts</a></li>
@@ -110,13 +111,12 @@
                     <i class="fa fa-linkedin-square" aria-hidden="true" style="font-size: 22px; align-items: center;"></i>
                 </a>
             </li>
+       
+            <li><a href="https://portfolio-alkarshi-abdullrahman.alwaysdata.net/" 
+                    style="text-decoration: none;">Portfolio du créateur
+                </a>
+            </li>
         </ul>
-      <!--  <li>&copy; Copyright 2024</li>  -->
-        <li><a href="https://portfolio-alkarshi-abdullrahman.alwaysdata.net/" 
-                style="text-decoration: none;">Portfolio du créateur
-            </a>
-        </li>
-    
     </footer>
 </body>
 </html>
