--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,371 @@
+
+/* Style pour la première section */
+#blocavion {
+  display: flex;
+  height: 500px;
+}
+
+
+#blocavionBloc {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
+}
+
+#blocavionIMG {
+  width: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+#Titrebloc {
+  font-family: Oswald;
+  font-size: 35px;
+  text-align: center;
+}
+
+#SousTitrebloc {
+  font-style: italic;
+  padding-bottom: 25px;
+  font-family: Gupter;
+  text-align: center;
+}
+
+#Texte {
+  color: grey;
+  font-style: italic;
+  text-align: center;
+  font-family: Raleway;
+  line-height: 1.6;
+  margin: 0; 
+  padding: 0 20px; 
+}
+
+
+
+
+
+
+/* Style pour la deuxième section */
+#bloglogoaero {
+  display: flex;
+  height: 400px;
+}
+
+#logoaeroIMG {
+  width: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+#contentBloc {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white; 
+  padding: 0 20px;
+}
+
+#contentBlocEnglobe {
+  max-width: 100%;
+  text-align: center;
+}
+
+#TitreContent {
+  font-family: Oswald;
+  font-size: 35px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+#SousTitreContent {
+  font-style: italic;
+  display: block;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+#TexteContent {
+  font-family: Raleway;
+  color: grey;
+  font-style: italic;
+  line-height: 1.6;
+  text-align: center;
+  margin: 0;
+  padding: 0 20px; 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* SECTION GALERIE */
+#GALERIE {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  height: 400px;
+}
+
+#BLOC_IMG {
+  position: relative;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	width: 100%;
+    overflow: hidden;
+}
+
+#BLOC_IMG img {
+  width: 100%;
+}
+
+#BLOC_IMG img:hover {
+  background-color: rgba(255, 165, 0, 0.7);
+}
+
+.EnglobeSigne {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+#BLOC_IMG:hover .EnglobeSigne {
+  opacity: 1;
+}
+
+.Signe {
+  font-size: 2rem;
+  color: white;
+}
+
+
+
+
+/* SERVICES */
+
+#SERVICES{
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+.EnglobeSERVICE{
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	justify-content: space-around;
+}
+
+
+.EnglobeSERVICE a img{  
+	display: flex;
+	margin-left: auto;
+    margin-right: auto;
+	width: 25%;
+	margin-bottom: 20px;
+    background-color: white;
+}
+
+.EnglobeSERVICE h3{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	font-family: Oswald;
+	margin-bottom: 6px;
+}
+
+.TexteSERVICE{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	vertical-align: middle;
+	margin-bottom: 10px;
+	font-family: Gupter;
+	color: grey;
+	text-align: center;
+}
+
+
+
+
+
+/* MEDIAS QUERIES 1024*/
+
+@media all and (max-width: 1024px) { 
+  h4#ParagrapheTexte {
+      height: auto;
+      padding: 0;
+      margin: 0;
+  }
+}
+
+
+
+/* MEDIAS QUERIES 768 */
+@media all and (max-width: 768px) { 
+  /* TOUTE LA 1ER SECTION*/
+  #blocavion {
+    display: block;
+    height: 800px;
+  }
+  
+  /* les blocs blanc en plein vol*/
+  #blocavionBloc {
+    width: 100%;
+    min-height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+  }
+
+  /* IMAGES */
+  #blocavionIMG {
+    width: 100%;
+  }
+
+  #ParagrapheTexte{
+    font-size: 16px;
+  }
+
+  /* Grosse IMAGE*/
+  #GALERIE{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
+
+  #BLOC_IMG{
+    width: 100%;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  #SERVICES{
+    display: block;
+    width: 100%;
+  }
+
+  footer{
+    width: 100%;
+    display:flex;
+    justify-content: space-around;
+    flex-direction: row;
+  }
+
+
+}
+
+
+
+
+/* CACHER LA PARTIE IMAGES MEDIAS QUERIES 425 */
+@media all and (max-width: 425px) { 
+  #blocavionIMG{
+    height: auto;
+  }
+
+  #blocavionBloc{
+    height: auto;
+  }
+
+  #GALERIE{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+#BLOC_IMG{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 10px;
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #ONGLET {
     display: flex;
     font-size: 16px;
     color: red;
     flex-direction: row; 
-
+    font-family:Oswald;
     width: 100%;
     background-color: #5ED9F4; 
     height: 80px;
@@ -36,11 +398,21 @@ footer {
   background-color: #5ED9F4;
   align-items: center;
   font-size: 18px;
-
   left:0px;
   height: 80px;
   bottom:0px;
   width:100%;
+}
+
+
+footer ul {
+  display: flex;
+  flex-direction : row;
+  width: 100%;
+  justify-content: space-around;
+  list-style-type: none;
+  font-size: 18px;
+  font-family: Oswald;
 }
 
 .fa.fa-linkedin-square:before {
@@ -203,10 +575,71 @@ footer {
 
 
 
+/* NOUVELLE AJOUT DE CATEGORIE*/
 
+#SERVICES{
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-around;
+}
 
+#EnglobeSERVICE{
+  padding-left: 5px; 
+  width: 180px;
+}
 
+.titretexte{
+  justify-content: center;
+  text-align:center;
+}
 
+.rounded-circle{
+  width:auto;
+}
+
+/* NOUVELLE AJOUT DE CATEGORIE POUR MOBILE - 600px*/
+@media all and (max-width: 600px) { 
+  #SERVICES{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+  }
+
+  #EnglobeSERVICE{
+    display: flex;
+    height: auto;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 15px;
+  }
+
+  #EnglobeSERVICE > img{
+      display: flex;
+      height: auto;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+  }
+
+  .listecategorie{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+  }
+  .titretexte{
+    justify-content: center;
+    text-align:center;
+  }
+
+ 
+
+  
+}
 
 
 
