--- a/templates/article/list.html.twig
+++ b/templates/article/list.html.twig
@@ -3,10 +3,12 @@
 
 {% block title %}Liste des Articles{% endblock %}
 {% block body %}
+    <div style="height: auto; list-style-type: none; border: 2px solid white; border-radius: 10px; padding: 20px; font-size: 20px;">
     <h1>Liste des Articles </h1>
     <ul>
         {% for articles in articles %}
             <li>{{ articles.title }}</li>
         {% endfor %}
     </ul>
+    </div>
 {% endblock %}
