Ajout de la page de Confidentialité et de sa route afin de montré la conformité avec le RGPD et également le respect des recommandations de la CNIL qui veillent à la protection des données personnelles.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -111,6 +111,13 @@
                     <i class="fa fa-linkedin-square" aria-hidden="true" style="font-size: 22px; align-items: center;"></i>
                 </a>
             </li>
+
+            <li>
+                <a href="{{ path('politique_confidentialite') }}" style="text-decoration: none;">
+                    Politique de confidentialité
+                </a>
+            </li>
+            
        
             <li><a href="https://portfolio-alkarshi-abdullrahman.alwaysdata.net/" 
                     style="text-decoration: none;">Portfolio du créateur
