--- a/public/css/style.css
+++ b/public/css/style.css
@@ -399,7 +399,7 @@ footer {
   align-items: center;
   font-size: 18px;
   left:0px;
-  height: 80px;
+  height: 50px;
   bottom:0px;
   width:100%;
 }
@@ -409,10 +409,13 @@ footer ul {
   display: flex;
   flex-direction : row;
   width: 100%;
+  height: 50px;
   justify-content: space-around;
   list-style-type: none;
-  font-size: 18px;
+  font-size: 15px;
   font-family: Oswald;
+  margin-bottom: 0;
+  align-items: center;
 }
 
 .fa.fa-linkedin-square:before {
